<resources>
  <string name="app_name">Agenda Jovens PIBBaeta</string>

  <string name="navigation_drawer_open">Abrir navegação</string>
  <string name="navigation_drawer_close">Fechar navegação</string>
  <string name="action_settings">Configurações</string>
  <string name="pedido_oracao">Pedido de Oração</string>
  <string name="programacao">Programação</string>
  <string name="enviar">Enviar</string>
  <string name="nome">Nome</string>
  <string name="email">E-mail</string>
  <string name="telefone">Telefone</string>
  <string name="pedido">Pedido</string>
  <string name="enviar_pedido">Enviar Pedido</string>
  <string name="data">Data</string>
  <string name="local">Local</string>
  <string name="endereco">Endereço</string>
  <string name="descricao">Descrição</string>
  <string name="observacao">Observação</string>
  <string name="mapa">Mapa</string>
  <string name="feedback">Feedback</string>
  <string name="configuracao">Configuração</string>

  <string name="campo_obrigatorio">Campo obrigatório.</string>
  <string name="email_invalido">Email inválido.</string>
  <string name="escreva_seu_feedback">Escreva seu feedback</string>

  <string name="pedido_oracao_enviado_sucesso">Pedido de oração enviado com sucesso.</string>
  <string name="pedido_oracao_salvo_sucesso">Pedido de oração salvo com sucesso.</string>
  <string name="feedback_enviado_sucesso">Feedback enviado com sucesso.</string>
  <string name="feedback_salvo_sucesso">Feedback salvo com sucesso.</string>
  <string name="configuracoes">Configurações</string>
  <string name="notificacoes">Notificações</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
</resources>