<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/p_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/p_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/p_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/p_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pedido"
        android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/p_enviar_pedido"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginTop="24dp"
      android:padding="12dp"
      android:text="@string/enviar_pedido" />

  </LinearLayout>
</ScrollView>