<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="16dp">

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/prog_detail_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop" />

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
          android:id="@+id/prog_detail_label_data"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/data" />

        <TextView
          android:id="@+id/prog_detail_data"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_below="@id/prog_detail_label_data" />

        <TextView
          android:id="@+id/prog_detail_label_local"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/prog_detail_data"
          android:text="@string/local" />

        <TextView
          android:id="@+id/prog_detail_local"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_below="@+id/prog_detail_label_local" />

        <TextView
          android:id="@+id/prog_detail_label_endereco"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/prog_detail_local"
          android:text="@string/endereco" />

        <TextView
          android:id="@+id/prog_detail_endereco"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_below="@+id/prog_detail_label_endereco" />

        <TextView
          android:id="@+id/prog_detail_label_descricao"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/prog_detail_endereco"
          android:text="@string/descricao" />

        <TextView
          android:id="@+id/prog_detail_descricao"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_below="@+id/prog_detail_label_descricao" />

        <TextView
          android:id="@+id/prog_detail_label_observacao"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/prog_detail_descricao"
          android:text="@string/observacao" />

        <TextView
          android:id="@+id/prog_detail_observacao"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/prog_detail_label_observacao" />

      </RelativeLayout>

    </LinearLayout>

  </android.support.v7.widget.CardView>

</LinearLayout>